--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@
 html {
   overflow-x: hidden;
 }
+.overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  display: none;
+}
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +23,7 @@ html {
 }
 body {
   overflow-x: hidden;
+  position: relative;
 }
 ul,
 ol,
