--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,45 @@ a {
   left: unset !important;
   right: 0 !important;
 }
-#fp-nav ul li a span{
-}
 .container {
   width: 100%;
   max-width: 1340px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+}
+/* TOOL BAR */
+.toolbar_con {
+  background-color: #FFF;
+  position: fixed;
+  top: 60%;
+  right: 0;
+  z-index: 50;
+}
+.search_tool,
+.top_tool {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 15px;
+}
+.search_tool {
+  background-color:#0087f1;
+}
+.top_tool {
+  background-color:#394147;
+  padding: 20px 15px;
+}
+.search_tool p,
+.top_tool p {
+  color: #FFF;
+  font-size: 14px;
+}
+.search_tool i,
+.top_tool i {
+  color: #FFF;
+  font-size: 26px;
 }
 /* HEADER */
 header.pc {
