--- a/css/jquery.fullpage.css
+++ b/css/jquery.fullpage.css
@@ -10,12 +10,12 @@ html.fp-enabled {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
 }
 .fp-section {
   position: relative;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  /* -webkit-box-sizing: border-box; */
+  /* -moz-box-sizing: border-box; */
   box-sizing: border-box;
 }
 .fp-slide {
@@ -31,7 +31,7 @@ html.fp-enabled {
   height: 100%;
   overflow: hidden;
   position: relative;
-  -webkit-transition: all 0.3s ease-out;
+  /* -webkit-transition: all 0.3s ease-out; */
   transition: all 0.3s ease-out;
 }
 .fp-section.fp-table,
@@ -51,10 +51,10 @@ html.fp-enabled {
   position: relative;
 }
 .fp-controlArrow {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -ms-user-select: none;
+  /* -webkit-user-select: none; */
+  /* -moz-user-select: none; */
+  /* -khtml-user-select: none; */
+  /* -ms-user-select: none; */
   position: absolute;
   z-index: 4;
   top: 50%;
@@ -63,8 +63,8 @@ html.fp-enabled {
   height: 0;
   border-style: solid;
   margin-top: -38px;
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
+  /* -webkit-transform: translate3d(0, 0, 0); */
+  /* -ms-transform: translate3d(0, 0, 0); */
   transform: translate3d(0, 0, 0);
 }
 .fp-controlArrow.fp-prev {
@@ -89,7 +89,7 @@ html.fp-enabled {
   border: 0 !important;
 }
 .fp-notransition {
-  -webkit-transition: none !important;
+  /* -webkit-transition: none !important; */
   transition: none !important;
 }
 #fp-nav {
@@ -98,7 +98,7 @@ html.fp-enabled {
   margin-top: -32px;
   top: 50%;
   opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
+  /* -webkit-transform: translate3d(0, 0, 0); */
 }
 #fp-nav.right {
   right: 17px;
@@ -110,8 +110,8 @@ html.fp-enabled {
   position: absolute;
   z-index: 4;
   opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
+  /* -webkit-transform: translate3d(0, 0, 0); */
+  /* -ms-transform: translate3d(0, 0, 0); */
   transform: translate3d(0, 0, 0);
   left: 0 !important;
   right: 0;
@@ -170,9 +170,9 @@ html.fp-enabled {
   left: 50%;
   top: 50%;
   margin: -2px 0 0 -2px;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
+  /* -webkit-transition: all 0.1s ease-in-out; */
+  /* -moz-transition: all 0.1s ease-in-out; */
+  /* -o-transition: all 0.1s ease-in-out; */
   transition: all 0.1s ease-in-out;
 }
 #fp-nav ul li:hover a span,
@@ -197,7 +197,7 @@ html.fp-enabled {
 }
 #fp-nav ul li:hover .fp-tooltip,
 #fp-nav.fp-show-active a.active + .fp-tooltip {
-  -webkit-transition: opacity 0.2s ease-in;
+  /* -webkit-transition: opacity 0.2s ease-in; */
   transition: opacity 0.2s ease-in;
   width: auto;
   opacity: 1;
