--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,7 @@
 html {
   overflow-x: hidden;
 }
-.overlay {
-  background-color: rgba(0, 0, 0, 0.4);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 50;
-  display: none;
-}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,6 +25,23 @@ a {
   text-decoration: none;
 }
 /* COMMON */
+.skip_menu {
+  position: fixed;
+  width: 100%;
+  background-color: #394147;
+  color: #FFF;
+  z-index: -999;
+}
+.overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  display: none;
+}
 #fp-nav {
   z-index: 40 !important;
 }
