--- a/css/style.css
+++ b/css/style.css
@@ -1619,6 +1619,7 @@ footer {
   .second_slide_small ul li a img {
     width: calc(100% - 40px);
     padding: 0 20px;
+    margin-top: 30px;
   }
   .second_slide_small2 ul li a img {
     width: calc(100% - 40px);
