--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* RESET */
 html {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 * {
@@ -271,6 +271,8 @@ header.pc.open .bg {
 }
 header.pc .header_wrapper {
   width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1424,7 +1426,7 @@ footer {
   }
   .slidebar {
     width: max-content;
-    top: 650px;
+    top: 700px;
   }
   .mainBanner {
     display: none;
@@ -1436,6 +1438,7 @@ footer {
     padding-right: 20px;
   }
   .notice_top {
+    width: calc(100% - 40px);
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -1452,6 +1455,15 @@ footer {
     max-width: 50px;
     height: unset;
   }
+  .sns_tab {
+    display: none;
+  }
+  .society_tab {
+    width: 100%;
+}
+.photo_news {
+  margin-left: 30px;
+}
 }
 
 @media screen and (max-width: 1240px) {
@@ -1467,11 +1479,11 @@ footer {
     background-color: #fff;
     justify-content: space-between;
   }
-  header.mo .bg {
-    display: none;
-  }
   header.mo .logo {
-    width: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 20px;
   }
   header.mo .all_menu {
     display: flex;
@@ -1486,12 +1498,23 @@ footer {
     height: 60px;
   }
   header.mo .header_wrapper {
+    width: 100%;
+    display: flex;
     justify-content: space-between;
   }
-  .header.mo .header_tool ul li a {
+  header.mo .header_tool {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  header.mo .header_tool ul li a {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .header_tool ul {
+    margin-right: 20px;
   }
 
   /* slider */
@@ -1569,6 +1592,7 @@ footer {
   }
   .society_wrap img {
     width: 100%;
+    max-width: 480px;
     border-radius: 20px;
   }
   .notice_bottom {
@@ -1851,10 +1875,13 @@ footer {
   }
   .notice_list li a {
     font-size: 15px;
+    width: 70%;
   }
   .notice_list li div {
     font-size: 12px;
   }
-  
+  .notice_list li a h4 {
+    width: 100%;
+  }
   
 }
