221219 헤더 오류 수정과 풀페이지 js, css 변경

--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ header.pc.open .bg {
 }
 header.pc .header_wrapper {
   width: 100%;
-  max-width: 1600px;
+  /* max-width: 1600px; */
   margin: 0 auto;
   display: flex;
   justify-content: center;
