--- a/css/fullpage.css
+++ b/css/fullpage.css
@@ -226,11 +226,12 @@ html.fp-enabled,
 /*Only display content to screen readers*/
 .fp-sr-only{
     position: absolute;
+    right: 0;
     width: 1px;
     height: 1px;
     padding: 0;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
-    border: 0;
+    border: none;
 }
