221220 레이어 제작

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,30 @@
 html {
   overflow-x: hidden !important;
 }
-
+/* layer popup */
+#layer {
+  position: fixed;
+  width: 500px;
+  height: 500px;
+  background-color: #ccc;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
+  z-index: 99999;
+  font-size: 1.4em;
+  padding: 3em;
+  box-sizing: border-box;
+  line-height: 2;
+  top: 50px;
+  left: 150px;
+}
+#layer button {
+  position: absolute;
+  cursor: pointer;
+  padding: 10px 20px;
+  right: 0;
+  top: 0;
+  background-color: #222;
+  color: #FFF;
+}
 * {
   margin: 0;
   padding: 0;
