--- a/css/sub.css
+++ b/css/sub.css
@@ -1,5 +1,142 @@
 @charset "utf-8";
 /* header */
 header.pc {
+  position: fixed;
+}
+/* common */
+.sub_head_title {
+  width: 100%;
+  height: 345px;
+  display: flex;
+  background-color: #000;
+  background-image: url(../img/sub/bg_sub_top_01.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.sub_head_title .container {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 15px;
+}
+.sub_head_title .container h2 {
+  width: 100%;
+  font-size: 50px;
+  color: #fff;
+  text-align: center;
+}
+.sub_head_title .container .sub_head_menu {
+  width: 100%;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+}
+.sub_head_title .container .sub_head_menu i,
+.sub_head_title .container .sub_head_menu a {
+  color: #fff;
+  font-size: 17px;
+}
+.sub_head_title .container .sub_head_menu i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+.sub_head_title .container .sub_head_menu a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* sub common */
+.sub {
+  width: 100%;
+}
+.sub .container {
+  padding: 60px 20px 80px;
+  flex-wrap: wrap;
+}
+.sub_title {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding: 20px 0 25px;
+  margin-bottom: 50px;
+}
+.sub_title h3 {
+  background: url(../img/sub/ic_bullet_01.png) no-repeat left top 13px;
+  font-size: 30px;
+  font-weight: 500;
+  color: #222;
+  padding-left: 33px;
+}
+.sub_title .title_tool {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+.sub_title .title_tool div {
+  width: 40px;
+  height: 40px;
+  background-color: #f0f0ee;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sub_title .title_tool div i {
+  font-size: 25px;
+  color: #888;
+}
+/* board */
+.sub_top_box {
+  width: 100%;
+  padding: 50px 60px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.content_icon {
+  width: 145px;
+  height: 145px;
+  background-color: #1c5db1;
+  margin-right: 45px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content_text p.notice {
+  color: #1c5db1;
+  font-size: 20px;
+  display: block;
+  margin-bottom: 10px;
+}
+.content_text span.notice_desc {
+  font-size: 16px;
+  color: #333;
+  font-weight: 400;
+}
+.content_text p.view {
+  margin-top: 20px;
+}
+.content_text p.view span {
+  color: red;
+}
+.content_text p.view a {
+  padding: 5px 20px 4px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  margin: 0 3px;
 }
 /* board list */
