--- a/css/common.css
+++ b/css/common.css
@@ -142,6 +142,7 @@ header.pc .header_menu {
 header.pc.active {
   width: 100%;
   background: #fff;
+  border-bottom: 1px solid #ddd;
 }
 header.pc.active .depth1 > a {
   color: #666;
@@ -515,6 +516,37 @@ footer {
 .footer_icon_wrapper a {
   display: inline-block;
   margin-left: 10px;
+}
+/* paging */
+.paging {
+  width: 100%;
+  padding: 30px 0 40px;
+}
+.paging ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+.paging ul li {
+}
+.paging ul li a {
+  width: 38px;
+  height: 38px;
+  font-size: 13px;
+  font-weight: 300;
+  display: block;
+  border: 1px solid #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.paging ul li.active {
+  background-color: #003d7c;
+}
+.paging ul li.active a {
+  color: #fff;
+  font-weight: 600;
 }
 /* responsive */
 @media screen and (max-width: 1600px) {
