--- a/css/main.css
+++ b/css/main.css
@@ -969,7 +969,9 @@
 }
 
 @media screen and (max-width: 1240px) {
-  /* slider */
+  #layer {
+    display: none;
+  }
   /* section2 */
   .business {
     height: 110px;
