--- a/css/main.css
+++ b/css/main.css
@@ -972,6 +972,7 @@
   #layer {
     display: none;
   }
+
   /* section2 */
   .business {
     height: 110px;
@@ -1210,6 +1211,10 @@
   .logo img {
     width: 110px;
   }
+  header.mo .logo {
+    padding-left: 0;
+  }
+
   .header_tool ul li a {
     font-size: 13px;
   }
